<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/astro_dark_background"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/container_login_password_nav"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_login_password_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/bg_login_icon_button"
            android:contentDescription="@string/login_password_back_description"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_login_back" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_login_password_nav"
        app:layout_constraintWidth_max="430dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:paddingBottom="160dp">

            <TextView
                android:id="@+id/text_login_password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_family"
                android:includeFontPadding="false"
                android:text="@string/email_identification_title"
                android:textColor="@color/astro_light_text"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_login_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_family"
                android:includeFontPadding="false"
                android:text="@string/login_password_label"
                android:textColor="@color/astro_light_background"
                android:textSize="16sp" />

            <FrameLayout
                android:id="@+id/container_login_password_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_email_identification_input">

                <EditText
                    android:id="@+id/input_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="password"
                    android:background="@null"
                    android:fontFamily="@font/montserrat_family"
                    android:gravity="center_vertical"
                    android:hint="@string/login_password_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="yes"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="56dp"
                    android:paddingBottom="0dp"
                    android:singleLine="true"
                    android:textColor="@color/astro_light_background"
                    android:textColorHint="@color/astro_input_hint"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/button_login_password_visibility"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="6dp"
                    android:background="@drawable/bg_login_icon_button"
                    android:contentDescription="@string/login_password_show_description"
                    android:padding="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_login_eye" />

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/text_login_password_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_family"
                    android:includeFontPadding="false"
                    android:text="@string/login_password_error"
                    android:textColor="@color/astro_error"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_login_password_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_family"
                    android:includeFontPadding="false"
                    android:text="@string/login_password_forgot"
                    android:textColor="@color/astro_light_background"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/button_login_password_enter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_login_password_button"
                android:clickable="true"
                android:contentDescription="@string/login_password_action"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_family"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/login_password_action"
                    android:textColor="@color/astro_light_background"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="17dp"
                    android:contentDescription="@null"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_arrow_right" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
