<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/astro_dark_background"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="160dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="144dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/astro_logo_content_description"
                android:scaleType="fitCenter"
                android:src="@drawable/astro_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_family"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/flow_choice_title"
                android:textColor="@color/astro_light_text"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_family"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/flow_choice_subtitle"
                android:textColor="@color/astro_tertiary_light_text"
                android:textSize="16sp" />

            <FrameLayout
                android:id="@+id/button_flow_choice_manager"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_login_password_button"
                android:clickable="true"
                android:contentDescription="@string/flow_choice_manager"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_family"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/flow_choice_manager"
                    android:textColor="@color/astro_light_background"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="17dp"
                    android:contentDescription="@null"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_arrow_right" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/button_flow_choice_employee"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_flow_choice_secondary_button"
                android:clickable="true"
                android:contentDescription="@string/flow_choice_employee"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_family"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/flow_choice_employee"
                    android:textColor="@color/astro_light_background"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="17dp"
                    android:contentDescription="@null"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_arrow_right" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
